--- a/content/her/restaurant/9-30.md
+++ b/content/her/restaurant/9-30.md
@@ -6,12 +6,12 @@ draft: false
 
 国庆前真正意义上的最后一顿饭——虽然第二天还在风味吃了一顿被当作午饭的早饭——因为我们晚上都有晚课，没法好好挑个餐厅尽兴地享受最后的晚餐。但又不想把这种时刻只是交给银泉的瘦肉丸、东区一楼的烧腊饭这种过于日常的食物。稍加思考后，我们把银泉3楼作为最后的目的地。
 银泉三楼有“食天一隅”和“小乐惠”两间餐厅，我俩都只吃过一次小乐惠，但从前听学长说过关于前者的“坏话”，因此我还是把g拉进了小乐惠——性价比不错的川菜餐厅。
-![一张图片](/images/9-30-1.jpg)
+![一张图片](/image/9-30-1.jpg)
 
 
 ### 番茄炒蛋
 
-![番茄炒蛋](/images/9-30-2.jpg)
+![番茄炒蛋](/image/9-30-2.jpg)
 
 - 口味：进嘴第一口g就睁大了眼睛，见状我也挖了一筷子，很快就知道g露出这样表情的原因。那种经典、落胃，锅气饱满的咸香口味伴随着番茄块酸度适当的汁水和一勾薄芡后浓厚的汤汁儿在口腔当中弥漫，回味是一种不齁的土咸口味，让我的味蕾感到持续的安定和满足。如此简单的食材搭配，却可以历久弥新，不是没有道理。
 
@@ -19,7 +19,7 @@ draft: false
 
 ### 贵州酸汤鱼
 
-![贵州酸汤鱼](/images/9-30-3.jpg)
+![贵州酸汤鱼](/image/9-30-3.jpg)
 
 - 食材：黑鱼？、金针菇、豆芽
 
@@ -29,7 +29,7 @@ draft: false
 
 ### 牛肉香锅
 
-![牛肉香锅](/images/9-30-4.jpg)
+![牛肉香锅](/image/9-30-4.jpg)
 
 - 食材：牛肉、土豆、藕、香菜、花椒、芝麻
 
