--- a/content/her/restaurant/10.8.md
+++ b/content/her/restaurant/10.8.md
@@ -9,7 +9,7 @@ draft: false
 
 ### 黑胡椒牛肉啫啫煲
 
-![黑胡椒牛肉](/image/zuojue1.jpg)
+![黑胡椒牛肉](/images/zuojue1.jpg)
 
 食材：牛肉粒、京葱、大蒜、小米椒
 口味：整个锅端上来的时候锅气很足，确实是juejue作响，服务员搅拌的时候油还溅到我手上了，很有热火朝天的感觉。京葱松软香甜（不吃葱的某人有难了），牛肉粒香气很足，但肉质有点过于嫩滑了？不知道是什么原因。总体是一个咸鲜口，还是很好吃的。
@@ -18,7 +18,7 @@ draft: false
 
 ### 空心菜啫啫煲
 
-![空心菜](/image/zuojue2.jpg)
+![空心菜](/images/zuojue2.jpg)
 
 食材：空心菜...大蒜（哪都有你）
 口味：空心菜很入味，咸口调的恰到好处，口感也很软嫩，吃不出来什么渣渣。一口下去，绿油油的菜叶裹着薄薄一层热油，虽然是蔬菜但吃着相当上瘾啊。
@@ -26,7 +26,7 @@ draft: false
 
 ### 红米脆虾卷？
 
-![红米脆虾卷](/iamge/zuojue3.jpg)
+![红米脆虾卷](/iamges/zuojue3.jpg)
 
 食材：虾、脆香米、神秘配方...
 口味：这道菜主要的亮点在于口感：酥脆香甜的红色外皮和很有嚼感的脆香米，配合内层软嫩的虾肉，让整个口感层次非常丰富。调味就是很正常的广式点心味道。
@@ -35,7 +35,7 @@ draft: false
 
 ### 咸蛋黄鸡翅
 
-![鸡翅](/image/zuojue4.jpg)
+![鸡翅](/images/zuojue4.jpg)
 
 无需多言，口味经典，一人吃了五只。“等下长翅膀飞走了，但因为吃了奇数只所以飞的歪歪扭扭....”出门后g这样说。
 
