--- a/content/her/restaurant/10.8.md
+++ b/content/her/restaurant/10.8.md
@@ -26,7 +26,7 @@ draft: false
 
 ### 红米脆虾卷？
 
-![红米脆虾卷](/iamges/zuojue3.jpg)
+![红米脆虾卷](/images/zuojue3.jpg)
 
 食材：虾、脆香米、神秘配方...
 口味：这道菜主要的亮点在于口感：酥脆香甜的红色外皮和很有嚼感的脆香米，配合内层软嫩的虾肉，让整个口感层次非常丰富。调味就是很正常的广式点心味道。
