--- a/content/her/restaurant/26-1-11.md
+++ b/content/her/restaurant/26-1-11.md
@@ -4,14 +4,14 @@ date: 2026-01-15T13:22:52+08:00
 draft: false
 ---
 
-考完大物，考试周仅剩大物实验和半开卷sys两门考试，x和g两个人又进入传统开香槟环节。当然啦，相比于半年前的金匠，这一回在浙港国际吃一次木叶町只是把香槟拿出来抚摸一下。g前一天睡得很晚，前去吃饭的路上已经是有点头重脚轻、勉力支撑，回去以后从两点睡到八点便是明证。
+考完大物，考试周仅剩大物实验和半开卷sys两门考试，我俩又进入传统开香槟环节。当然啦，相比于半年前的金匠，这一回在浙港国际吃一次木叶町只是把香槟拿出来抚摸一下。她前一天睡得很晚，前去吃饭的路上已经是有点头重脚轻、勉力支撑，回去以后从两点睡到八点便是明证。
 
 ![一张图片](/images/1-11.jpg)
 
-g点了豚骨拉面，厚切的豚骨相对而言不是那么肥，是g喜欢的类型，赏脸吃了一片。但汤和面条都有些寡淡无味（我都觉得有点没味），为g所不喜，最后也没有吃完。
-我是他们家鳗鱼炒饭的忠实粉丝，米饭软硬适中，裹满酱汁。鳗鱼略有一点小刺但瑕不掩瑜，实在是软嫩香甜。（惊喜的是，上次不爱吃鳗鱼的g这回也有点发现鳗鱼好吃的地方了）。
+她点了豚骨拉面，厚切的豚骨相对而言不是那么肥，是她喜欢的类型，赏脸吃了一片。但汤和面条都有些寡淡无味（我都觉得有点没味），为她所不喜，最后也没有吃完。
+我是他们家鳗鱼炒饭的忠实粉丝，米饭软硬适中，裹满酱汁。鳗鱼略有一点小刺但瑕不掩瑜，实在是软嫩香甜。（惊喜的是，上次不爱吃鳗鱼的她这回也有点发现鳗鱼好吃的地方了）。
 最值得一提的是画面中的天妇罗，四只大虾，一片薄荷叶，一块香菇，美味全来自于即炸即出的那一份滚烫和酥脆，很快被我们蘸着热热的天妇罗汁一扫而空。其间还有两件小事儿值得一说（有点记不清了，和当时真实对话可能有点出入）：
 
-- 我（夹着香菇说）：“你要吃这个香菇吗？”   g：“你吃，但要是这香菇只有一个我就打si你。”   我（把香菇放回去，不死心）：“你嫌弃我口水吗？”
-- g（嚼嚼嚼，把一只虾全吃了）：“这虾尾巴呢？”
+- 我（夹着香菇说）：“你要吃这个香菇吗？”   她：“你吃，但要是这香菇只有一个我就打si你。”   我（把香菇放回去，不死心）：“你嫌弃我口水吗？”
+- 她（嚼嚼嚼，把一只虾全吃了）：“这虾尾巴呢？”
 
