--- a/content/her/restaurant/9-30.md
+++ b/content/her/restaurant/9-30.md
@@ -5,7 +5,7 @@ draft: false
 ---
 
 国庆前真正意义上的最后一顿饭——虽然第二天还在风味吃了一顿被当作午饭的早饭——因为我们晚上都有晚课，没法好好挑个餐厅尽兴地享受最后的晚餐。但又不想把这种时刻只是交给银泉的瘦肉丸、东区一楼的烧腊饭这种过于日常的食物。稍加思考后，我们把银泉3楼作为最后的目的地。
-银泉三楼有“食天一隅”和“小乐惠”两间餐厅，我俩都只吃过一次小乐惠，但从前听学长说过关于前者的“坏话”，因此我还是把g拉进了小乐惠——性价比不错的川菜餐厅。
+银泉三楼有“食天一隅”和“小乐惠”两间餐厅，我俩都只吃过一次小乐惠，但从前听学长说过关于前者的“坏话”，因此我还是把她拉进了小乐惠——性价比不错的川菜餐厅。
 ![一张图片](/images/9-30-1.jpg)
 
 
@@ -13,7 +13,7 @@ draft: false
 
 ![番茄炒蛋](/images/9-30-2.jpg)
 
-- 口味：进嘴第一口g就睁大了眼睛，见状我也挖了一筷子，很快就知道g露出这样表情的原因。那种经典、落胃，锅气饱满的咸香口味伴随着番茄块酸度适当的汁水和一勾薄芡后浓厚的汤汁儿在口腔当中弥漫，回味是一种不齁的土咸口味，让我的味蕾感到持续的安定和满足。如此简单的食材搭配，却可以历久弥新，不是没有道理。
+- 口味：进嘴第一口她就睁大了眼睛，见状我也挖了一筷子，很快就知道她露出这样表情的原因。那种经典、落胃，锅气饱满的咸香口味伴随着番茄块酸度适当的汁水和一勾薄芡后浓厚的汤汁儿在口腔当中弥漫，回味是一种不齁的土咸口味，让我的味蕾感到持续的安定和满足。如此简单的食材搭配，却可以历久弥新，不是没有道理。
 
 - 推荐指数：4.5/5
 
@@ -33,7 +33,7 @@ draft: false
 
 - 食材：牛肉、土豆、藕、香菜、花椒、芝麻
 
-- 口味：厚重的咸、香、辣的味道，随着汤汁被小火进一步浓缩，牛肉吃到后面有点过咸。但牛肉底下的土豆和藕片吸满了汤汁，本来难以入味的食材现在变得恰到好处。g是土豆脑袋，这土豆已经被评为丈夫级别了，吃到最后牛肉不管了，一直叫我在锅底帮忙找土豆。
+- 口味：厚重的咸、香、辣的味道，随着汤汁被小火进一步浓缩，牛肉吃到后面有点过咸。但牛肉底下的土豆和藕片吸满了汤汁，本来难以入味的食材现在变得恰到好处。她是土豆脑袋，这土豆已经被评为丈夫级别了，吃到最后牛肉不管了，一直叫我在锅底帮忙找土豆。
 
 - 推荐指数：4/5
 
@@ -45,5 +45,5 @@ draft: false
 
 
 ### 其他
-- 吃完饭后，g又美美遗忘自己新买两天的耳钉，幸好第二天去给她找到了。
-- g忘了填爱心社的问卷，吃饭中间还填了半个长长的问卷，然后一语成谶，晚上就被call去面试了。
+- 吃完饭后，她又美美遗忘自己新买两天的耳钉，幸好第二天去给她找到了。
+- 她忘了填爱心社的问卷，吃饭中间还填了半个长长的问卷，然后一语成谶，晚上就被call去面试了。
