--- a/content/her/restaurant/26-1-21.md
+++ b/content/her/restaurant/26-1-21.md
@@ -24,7 +24,82 @@ draft: false
 从超市里出来，门口篮球场里打球的初中生都不见了。
 
 
+### 今夕
 
-#### 今夕
+在我们第一次去吃皇叁叁的时候，歪歪提到了这家餐厅。
+- “这个红米肠不如jinxi的（我那个时候还不知道这间餐厅叫做今夕）。”
+- “今夕就是那种比较适合办宴席的餐厅。”
+- “我18岁生日就是在那里过的。”
+......
+每一次提及都增添了我对它的向往，在我的想象中，今夕就是漂亮饭和极致口感的完美结合。于是，和歪歪稍作商量便来这儿解决我的第一顿晚饭
 
-editing
+## Day2(1.22)
+
+### 小六汤包
+
+吵架、点单、门口有早餐餐车、拉开gyy的门、gyy把醋当成酱油、去动物园玩，在山上大哭一场解开矛盾
+炒大宽酸酸辣辣，白菜梗有点多，吃的我直呛
+酸酸辣辣的豆花
+汤包的馅儿有点稀，吃到下面几笼也有点凉了，但还是挺鲜的
+
+
+### 阿记烧烤
+
+服务员拿着串转转转
+疙瘩筋（爸爸型）、酱油筋（味道有点像红烧羊肉）、盐筋、烤面包（横纵一切，考的酥酥的）、没吃到牛肚，有鸡翅（但不知道为啥加了，导致味道有点怪怪的）、误点的鱼鳔好腥气、瘦肉和花肉一般。整体来说，感觉我们坐的离厨房出口有点远，串到我们这里都有点冷掉了，可能夏天吃会更好吃一点。
+
+去厕所的时候几个年轻人在互相确认是不是快喝吐了。
+
+边上有两个大叔吞云吐雾，有几下烟飘过来了还怪呛人的。
+
+时不时有一些戴墨镜的人在舞台上跳舞，最后有一个很漂亮（gyy说的）的姐姐唱歌。
+
+打车回去的路上，gyy说平时和爸妈三个人也就吃200多
+
+
+## Day3(1.23)
+
+### 魏家凉皮
+
+去秦岭前的中饭
+麻酱凉皮吃到后面还是有点难以接受麻酱的味道。
+薯条又热又脆，很好吃
+点了没吃过的炸鸡汉堡，我感觉还是虾和牛比较好吃
+
+### 偶遇花甲
+
+最早的老板是一对拉子
+
+gyy去卖包子，我负责找位置，被各种人占位，89号被反复呼叫（“89号！！你的虾要凉了！！”），端着菜，拎着雪夹子，在店面内失神地等待。
+
+虾已经是冰冰的了，很难剥。炒鱿鱼量特别大，外层有点凉了，挖到中间还是热乎乎的。
+
+日本豆腐的调味非常惊艳，辣度适中，咸香味直冲脑门
+
+花甲处理得很干净，由于我吃得太快，即使是微辣也吃的半死不活
+
+实在辣的不行拿了猕猴桃味的汉斯小木屋，gyy从未喝过，香精味有点重
+
+gyy吃了几分钟端出去拿了一笼热气腾腾的小笼包进来，7块钱8个，震撼美味！还偷吃了她爸爸的一个小包子。
+
+走回去经过了菜市场（偶遇花甲的食材就是从这里买的），gyy爷爷奶奶家、一家gyy妈妈在怀她的时候吵着要吃的颇有年岁的粉店、过年时候烧纸钱的桥洞、金台区的供暖厂，这条路是gyy从小走到大的。
+
+
+## Day4(1.24)
+
+### 魏斯理
+
+人声鼎沸，五味杂陈
+
+### 李记
+
+进门前是一个很家常的小院子，有柴火、粮食、挂在梁上风干的腊物
+铜锅还是电锅，多少斤牛肉、羊肉、花肉...
+菜是自己到冰柜里拿的
+巨便宜的虾滑（相比于海底捞）
+酸菜锅和孜然锅，gyy说炒的越来越不用心了，反正我吃着还是香的不行。
+羊肉中间有一块小小的脆骨，吃起来很香
+回去的路上gyy过桥以后买了两盒霹雳小子，有一个没扔响的炮被后面的一对母女踩响了，她们吓了一跳，gyy也非常满意。
+
+
+ 
