--- a/content/her/restaurant/26-1-21.md
+++ b/content/her/restaurant/26-1-21.md
@@ -31,7 +31,25 @@ draft: false
 - “今夕就是那种比较适合办宴席的餐厅。”
 - “我18岁生日就是在那里过的。”
 ......
-每一次提及都增添了我对它的向往，在我的想象中，今夕就是漂亮饭和极致口感的完美结合。于是，和歪歪稍作商量便来这儿解决我的第一顿晚饭
+每一次提及都增添了我对它的向往，在我的想象中，今夕就是漂亮饭和极致口感的完美结合。于是，和歪歪稍作商量便来这儿解决我的第一顿晚饭。
+
+今夕在方圆荟（去华山前我们在这里吃的魏斯理）边上一座小楼的5楼，在专用的直达电梯里，对应的按钮从数字换成了今夕的logo。店内的装潢有点江南风韵，空间开阔，工作日的半晚上人也不是很多，玻璃看出去就是天下汇，可惜我们没有坐在窗边，繁华的灯光被一面屏风挡住了。
+
+点菜的时候小瓶盖发现事情有些不妙，扁扁的好吃肉从客餐上消失了，大虾也不见了，此外还有好几样小瓶盖留恋的菜品因为菜单更替而湮没了。但好在红米肠还有！迅速下单ing。
+
+本来我以为今夕是吃粤菜的，看了菜单才发现，它更接近于粤菜和川菜的融合体，我们甚至点了一大碗毛血旺。
+**毛血旺**里有面条、猪血、带壳虾（有点不新鲜）、豆芽（我觉得毛血旺里放豆芽是因为只有豆芽不会变的太油，但依然不是很喜欢吃...）等等，比较平庸；
+**香酥鸡**味道不错，表皮酥脆程度也够，唯一美中不足的可能是吃到后面肉质有点干巴，不够多汁；**不知道名字的冷菜**，是用面包脆片、猪肉铺（？）和一坨解腻的果泥组装而成的小前菜，挺新颖的，就是有一点点硬；
+**忘记名字的虾球**好吃的让我眼前一亮，虾球个头很大，口感爽嫩Q弹。调味方面，除了传统的酸甜口，虾球里还加了花椒，让整道菜的风味更上了一个台阶。
+**心心念念的红米肠**果然没有让人失望，体积比我吃过的所有红米肠都要大上一圈，面衣软嫩，夹层松脆，虾仁个大新鲜，对于一个红米肠还有更多可以要求的吗？
+
+菜品总体都挺好吃，不仅量大，摆盘也好看，确实是宴席漂亮菜风格。但小瓶盖显然没有吃开心，因为出去读个半年的书，喜欢的菜都被不声不响换掉了，搁谁会受得了这气！于是在离开前，服务员上前问我们用餐体验的时候，小瓶盖愤愤然甩下：“好吃的菜都没有了！”便头也不回地离开了。
+
+哦哦哦，差点忘了，1.21当天是小瓶盖的生日，妈妈给她在楼下的好利来定了一个大大的提拉米苏（反正我俩吃不完），我们趁店员打包的时候还把冷藏柜里的每一种蛋糕都试吃了一遍（两个饿徒）。
+在餐桌上，给蛋糕插上蜡烛，我让小瓶盖坐到餐桌对面去给她拍一张生日晚餐的照片，但拍来拍去还是拍不好，最后沦为了无情的支架，实在是有点沮丧，因此我们还有一点点点小小小小的不愉快。（当然小瓶盖女娲转世妙手回春，最后还是选择了两张我掌镜的照片改造完发了pyq，爽！
+
+
+
 
 ## Day2(1.22)
 
@@ -46,7 +64,7 @@ draft: false
 ### 阿记烧烤
 
 服务员拿着串转转转
-疙瘩筋（爸爸型）、酱油筋（味道有点像红烧羊肉）、盐筋、烤面包（横纵一切，考的酥酥的）、没吃到牛肚，有鸡翅（但不知道为啥加了，导致味道有点怪怪的）、误点的鱼鳔好腥气、瘦肉和花肉一般。整体来说，感觉我们坐的离厨房出口有点远，串到我们这里都有点冷掉了，可能夏天吃会更好吃一点。
+疙瘩筋（爸爸型）、酱油筋（味道有点像红烧羊肉）、盐筋、烤风琴饼（横纵一切，考的酥酥的）、没吃到牛肚，有鸡翅（但不知道为啥加了，导致味道有点怪怪的）、误点的鱼鳔好腥气、瘦肉和花肉一般。整体来说，感觉我们坐的离厨房出口有点远，串到我们这里都有点冷掉了，可能夏天吃会更好吃一点。
 
 去厕所的时候几个年轻人在互相确认是不是快喝吐了。
 
