--- a/content/her/restaurant/26-1-21.md
+++ b/content/her/restaurant/26-1-21.md
@@ -17,7 +17,7 @@ draft: false
 
 吃完只觉一身舒适，其实也并不清淡，只是不辣，瓶盖喜欢吃辣的。走出五十米才想起要给阿姨带一份汤，迟疑了5秒以后，折回又打包了一份汤，加了半斤各式肉杂，这才罢休。
 
-吃完饭，我们逛了逛唐潮城，外头马路边上有个篮球场，几个学生在里面3打4（差点就要加入了），里面一个很大的华润万家（据说是地头蛇了，刚入驻宝鸡的盒马貌似有点打不太过），超市门口有不用扫码，直接机器上操作的储物柜，很方便。我们在里面玩了两轮商品图寻，以瓶盖2：0把我打进厕所告终。（她找了一个看上去很像汽水的咖啡和皇冠丹麦曲奇上的小鸭子）。
+吃完饭，我们逛了逛唐潮城，外头马路边上有个篮球场，几个学生在里面3打4（差点就要加入了），里面一个很大的华润万家（同类型的超市还有悦生活，据说是地头蛇了，刚入驻宝鸡的盒马貌似有点打不太过），超市门口有不用扫码，直接机器上操作的储物柜，很方便。我们在里面玩了两轮商品图寻，以瓶盖2：0把我打进厕所告终。（她找了一个看上去很像汽水的咖啡和皇冠丹麦曲奇上的小鸭子）。
 
 厕所门口有个玻璃罩子，里头养了四只孔雀，瓶盖说想要孔雀头顶的毛做装饰。
 
