--- a/content/her/restaurant/26-1-21.md
+++ b/content/her/restaurant/26-1-21.md
@@ -23,6 +23,8 @@ draft: false
 
 从超市里出来，门口篮球场里打球的初中生都不见了。
 
+![picture](/images/baoji2.1.jpg)
+
 
 ### 今夕
 
@@ -46,9 +48,9 @@ draft: false
 菜品总体都挺好吃，不仅量大，摆盘也好看，确实是宴席漂亮菜风格。但小瓶盖显然没有吃开心，因为出去读个半年的书，喜欢的菜都被不声不响换掉了，搁谁会受得了这气！于是在离开前，服务员上前问我们用餐体验的时候，小瓶盖愤愤然甩下：“好吃的菜都没有了！”便头也不回地离开了。
 
 哦哦哦，差点忘了，1.21当天是小瓶盖的生日，妈妈给她在楼下的好利来定了一个大大的提拉米苏（反正我俩吃不完），我们趁店员打包的时候还把冷藏柜里的每一种蛋糕都试吃了一遍（两个饿徒）。
-在餐桌上，给蛋糕插上蜡烛，我让小瓶盖坐到餐桌对面去给她拍一张生日晚餐的照片，但拍来拍去还是拍不好，最后沦为了无情的支架，实在是有点沮丧，因此我们还有一点点点小小小小的不愉快。（当然小瓶盖女娲转世妙手回春，最后还是选择了两张我掌镜的照片改造完发了pyq，爽！
+在餐桌上，给蛋糕插上蜡烛，我让小瓶盖坐到餐桌对面去给她拍一张生日晚餐的照片，但拍来拍去还是拍不好，最后沦为了无情的支b架，实在是有点沮丧，因此我们还有一点点点小小小小的不愉快。（当然小瓶盖女娲转世妙手回春，最后还是选择了两张我掌镜的照片改造完发了pyq，爽！
 
-
+![picture](/images/baoji2.2.jpg)
 
 
 ## Day2(1.22)
@@ -59,6 +61,8 @@ draft: false
 炒大宽酸酸辣辣，白菜梗有点多，吃的我直呛
 酸酸辣辣的豆花
 汤包的馅儿有点稀，吃到下面几笼也有点凉了，但还是挺鲜的
+
+![picture](/images/baoji2.3.jpg)
 
 
 ### 阿记烧烤
@@ -74,6 +78,8 @@ draft: false
 
 打车回去的路上，gyy说平时和爸妈三个人也就吃200多
 
+![picture](/images/baoji2.4.jpg)
+
 
 ## Day3(1.23)
 
@@ -83,6 +89,8 @@ draft: false
 麻酱凉皮吃到后面还是有点难以接受麻酱的味道。
 薯条又热又脆，很好吃
 点了没吃过的炸鸡汉堡，我感觉还是虾和牛比较好吃
+
+![picture](/images/baoji2.5.jpg)
 
 ### 偶遇花甲
 
@@ -102,12 +110,16 @@ gyy吃了几分钟端出去拿了一笼热气腾腾的小笼包进来，7块钱8
 
 走回去经过了菜市场（偶遇花甲的食材就是从这里买的），gyy爷爷奶奶家、一家gyy妈妈在怀她的时候吵着要吃的颇有年岁的粉店、过年时候烧纸钱的桥洞、金台区的供暖厂，这条路是gyy从小走到大的。
 
+![picture](/images/baoji2.6.jpg)
+
 
 ## Day4(1.24)
 
 ### 魏斯理
 
 人声鼎沸，五味杂陈
+
+![picture](/images/baoji2.7.jpg)
 
 ### 李记
 
@@ -119,5 +131,6 @@ gyy吃了几分钟端出去拿了一笼热气腾腾的小笼包进来，7块钱8
 羊肉中间有一块小小的脆骨，吃起来很香
 回去的路上gyy过桥以后买了两盒霹雳小子，有一个没扔响的炮被后面的一对母女踩响了，她们吓了一跳，gyy也非常满意。
 
+![picture](/images/baoji2.8.jpg)
 
  
