--- a/content/her/restaurant/26-1-21.md
+++ b/content/her/restaurant/26-1-21.md
@@ -85,30 +85,39 @@ draft: false
 
 ### 魏家凉皮
 
-去秦岭前的中饭
-麻酱凉皮吃到后面还是有点难以接受麻酱的味道。
-薯条又热又脆，很好吃
-点了没吃过的炸鸡汉堡，我感觉还是虾和牛比较好吃
+去秦岭看雪前的中饭，我们选了宝鸡站边上的一家魏家凉皮，自从在杭州吃完之后念念不忘，如今算是吃到魏家凉皮老巢了。
+
+我从酒店出发，小瓶盖从家里出发，微信上商量的差不多时间，您猜怎么着？我到店门口了她还困在小区里呢。我找了一个窗边的位置，阳光明媚，照小瓶盖的要求先把菜点了，望着街角翘首以盼
+
+麻酱凉皮竟然是凉的，没有米皮好吃，吃到后面还是有点难以接受麻酱的味道，在北京的那一场大胃病给我的印象实在太痛彻了。
+
+薯条又热又脆，非常好吃。
+
+点了没吃过的炸鸡汉堡，我感觉还是虾堡和牛肉汉堡比较好吃，炸鸡汉堡有点干巴，本来对他抱着比较高的期待，毕竟价格都是15块。
+
+宝鸡站对面有一个商场叫开元，外观对称大气，中间有一大块圆形的紫色玻璃，小瓶盖看了两眼和我说：“好像一瓶巨大的黑鸦片。”我深以为然。
 
 ![picture](/images/baoji2.5.jpg)
 
 ### 偶遇花甲
 
-最早的老板是一对拉子
+这家也是重量级，在杭州的某天晚上，第一次听小瓶盖说出了这家店的名字，但直到来宝鸡的前几天我才知道这两个字具体怎么写。
 
-gyy去卖包子，我负责找位置，被各种人占位，89号被反复呼叫（“89号！！你的虾要凉了！！”），端着菜，拎着雪夹子，在店面内失神地等待。
+听小瓶盖说，在她小学的时候，最早的老板是一对拉子，他们在菜场边上摆了一个小摊贩，后来因为生意越做越好，队伍越排越长，就有了第一间店面，再后来是扩建，最后又开发了卖小笼包的小铺子。
+
+我们到的有点晚，已经六点半了，店门口点餐和卖小笼的地方都排起了队伍，店内更是一个座位都没有。于是，点完菜我们一合计决定让小瓶盖去买包子，我负责找位置。因为经验不足，还被各种人占位，我们取到89号被店员反复呼叫（“89号！！你的虾要凉了！！”），最后我一边端着菜（还有好多菜随便找了些台面防防），一边拎着雪夹子，在店面内失神地等待。
+
+最后，一桌我关注已久的两个女生终于吃好了！小瓶盖也恰逢其时地拎着热腾腾的战利品回来了。
 
 虾已经是冰冰的了，很难剥。炒鱿鱼量特别大，外层有点凉了，挖到中间还是热乎乎的。
 
-日本豆腐的调味非常惊艳，辣度适中，咸香味直冲脑门
+日本豆腐的调味非常惊艳，辣度适中，咸香味直冲脑门，是小瓶盖的最爱
 
-花甲处理得很干净，由于我吃得太快，即使是微辣也吃的半死不活
+花甲处理得很干净，香辣味异常浓郁。但是即使是微辣也让我吃的半死不活。我和瓶盖吃辣水平在杭州好像差的没有很明显，但是这一顿不知道为什么，我辣的已经死乞白赖，她却浑然自若，一定是我吃的太快了（瓶盖看到这里一定会轻笑一声）。最后实在辣的不行拿了猕猴桃味的汉斯小木屋，瓶盖从未喝过这个口味，香精味有点重，平平无奇
 
-实在辣的不行拿了猕猴桃味的汉斯小木屋，gyy从未喝过，香精味有点重
+吃了几分钟，瓶盖又出去拿了一笼点了单但刚才还没做好的热气腾腾的小笼进来，7块钱8个的价格加上令人动容的美味，实在是理解为什么这家店有如此火爆的生意！在瓶盖的怂恿下，我还偷吃了本来是带给她爸爸的一个小包子。
 
-gyy吃了几分钟端出去拿了一笼热气腾腾的小笼包进来，7块钱8个，震撼美味！还偷吃了她爸爸的一个小包子。
-
-走回去经过了菜市场（偶遇花甲的食材就是从这里买的），gyy爷爷奶奶家、一家gyy妈妈在怀她的时候吵着要吃的颇有年岁的粉店、过年时候烧纸钱的桥洞、金台区的供暖厂，这条路是gyy从小走到大的。
+走回去经过了菜市场（是一条烟火气息很足的小巷子，偶遇花甲的食材就是从这里买的）、gyy爷爷奶奶家、一家gyy妈妈在怀她的时候吵着要吃的颇有年岁的粉店、过年时候烧纸钱的桥洞、金台区的供暖厂，这条路是gyy从小走到大的。
 
 ![picture](/images/baoji2.6.jpg)
 
