--- a/content/her/restaurant/26-1-21.md
+++ b/content/her/restaurant/26-1-21.md
@@ -48,10 +48,9 @@ draft: false
 菜品总体都挺好吃，不仅量大，摆盘也好看，确实是宴席漂亮菜风格。但小瓶盖显然没有吃开心，因为出去读个半年的书，喜欢的菜都被不声不响换掉了，搁谁会受得了这气！于是在离开前，服务员上前问我们用餐体验的时候，小瓶盖愤愤然甩下：“好吃的菜都没有了！”便头也不回地离开了。
 
 哦哦哦，差点忘了，1.21当天是小瓶盖的生日，妈妈给她在楼下的好利来定了一个大大的提拉米苏（反正我俩吃不完），我们趁店员打包的时候还把冷藏柜里的每一种蛋糕都试吃了一遍（两个饿徒）。
-在餐桌上，给蛋糕插上蜡烛，我让小瓶盖坐到餐桌对面去给她拍一张生日晚餐的照片，但拍来拍去还是拍不好，最后沦为了无情的支b架，实在是有点沮丧，因此我们还有一点点点小小小小的不愉快。（当然小瓶盖女娲转世妙手回春，最后还是选择了两张我掌镜的照片改造完发了pyq，爽！
+在餐桌上，给蛋糕插上蜡烛，我让小瓶盖坐到餐桌对面去给她拍一张生日晚餐的照片，但拍来拍去还是拍不好，最后沦为了无情的支架，实在是有点沮丧，因此我们还有一点点点小小小小的不愉快。（当然小瓶盖女娲转世妙手回春，最后还是选择了两张我掌镜的照片改造完发了pyq，爽！
 
 ![picture](/images/baoji2.2.jpg)
-
 
 ## Day2(1.22)
 
